--- a/1_Tutorial.ipynb
+++ b/1_Tutorial.ipynb
@@ -1290,7 +1290,7 @@
    },
    "outputs": [],
    "source": [
-    "df = df.withColumn(\"current_date\",current_date())\n",
+    "df = df.withColumn(\"current_date\", current_date().cast('date'))\n",
     "df.display()"
    ]
   },
@@ -1322,6 +1322,7 @@
       "byteLimit": 2048000,
       "rowLimit": 10000
      },
+     "collapsed": true,
      "inputWidgets": {},
      "nuid": "ddf47ba4-0077-4653-8988-e1aa41646eeb",
      "showTitle": false,
@@ -1370,6 +1371,7 @@
       "byteLimit": 2048000,
       "rowLimit": 10000
      },
+     "collapsed": true,
      "inputWidgets": {},
      "nuid": "4f4103e1-27b1-4f52-8214-5afa176726db",
      "showTitle": false,
@@ -1479,8 +1481,10 @@
    },
    "outputs": [],
    "source": [
-    "df = df.withColumn('current_date',date_format('current_date','dd-MM-yyyy'))\n",
-    "df.display()"
+    "df = df.withColumn('week_before',date_format('week_before','dd-MM-yyyy'))\n",
+    "\n",
+    "df.display()\n",
+    "     "
    ]
   },
   {
@@ -1520,7 +1524,8 @@
    },
    "outputs": [],
    "source": [
-    "df = df.withColumn('Outlet_Size',regexp_replace('Outlet_Size','null',None))"
+    "# df = df.withColumn('Outlet_Size',regexp_replace('Outlet_Size','null',None))\n",
+    "# df.display()"
    ]
   },
   {
@@ -1535,14 +1540,7 @@
      "inputWidgets": {},
      "nuid": "96c2d0d8-2b40-4e1b-97a0-4b4594f6e941",
      "showTitle": false,
-     "tableResultSettingsMap": {
-      "0": {
-       "dataGridStateBlob": "{\"version\":1,\"tableState\":{\"columnPinning\":{\"left\":[\"#row_number#\"],\"right\":[]},\"columnSizing\":{},\"columnVisibility\":{}},\"settings\":{\"columns\":{}},\"syncTimestamp\":1766345747306}",
-       "filterBlob": null,
-       "queryPlanFiltersBlob": null,
-       "tableResultIndex": 0
-      }
-     },
+     "tableResultSettingsMap": {},
      "title": ""
     }
    },
@@ -1680,7 +1678,7 @@
    },
    "outputs": [],
    "source": [
-    "df = df.fillna('NA',subset=['Outlet_Size'])\n",
+    "df.fillna('NA',subset=['Outlet_Size'])\n",
     "df.display()"
    ]
   },
@@ -1704,6 +1702,22 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {},
+     "inputWidgets": {},
+     "nuid": "cacca4a2-1dad-428a-93f5-b045b9851fd4",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "source": [
+    "#### split"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 0,
    "metadata": {
@@ -1714,6 +1728,546 @@
      },
      "inputWidgets": {},
      "nuid": "1097af17-e4c5-490f-a31e-c27cc583d44f",
+     "showTitle": false,
+     "tableResultSettingsMap": {
+      "0": {
+       "dataGridStateBlob": "{\"version\":1,\"tableState\":{\"columnPinning\":{\"left\":[\"#row_number#\"],\"right\":[]},\"columnSizing\":{\"Outlet_Type\":181},\"columnVisibility\":{}},\"settings\":{\"columns\":{}},\"syncTimestamp\":1768341044535}",
+       "filterBlob": null,
+       "queryPlanFiltersBlob": null,
+       "tableResultIndex": 0
+      }
+     },
+     "title": ""
+    }
+   },
+   "outputs": [],
+   "source": [
+    "df.withColumn('Outlet_Type',split('Outlet_Type',' ')).display()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "19e57b1f-1d08-4268-b6b5-24eaf40447c9",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "source": [
+    "#### indexing"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "237e41fa-a710-4b07-881f-8f3d9cb473b7",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "outputs": [],
+   "source": [
+    "df.withColumn('Outlet_Type',split('Outlet_Type',' ')[1]).display()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {},
+     "inputWidgets": {},
+     "nuid": "4065eb15-5dca-4f99-8e43-6a1e0939f397",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "source": [
+    "### Explode\n",
+    "it woorks with arrays and lists it seperates value wise records you can see we have created seperate datframe cause we dont want to ruin our main dataframe"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "1f3dacdc-cfdc-414e-bf34-03f9ffcc53c6",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "outputs": [],
+   "source": [
+    "df_explode = df.withColumn('Outlet_Type',split('Outlet_Type',' '))\n",
+    "df_explode.display()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "9b6616db-e9f7-4e6c-a94a-949008cf66ab",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "outputs": [],
+   "source": [
+    "df_explode.withColumn('Outlet_Type',explode('outlet_type')).display()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {},
+     "inputWidgets": {},
+     "nuid": "a454dcb3-afde-4f15-b45c-d2aa73409cef",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "source": [
+    "### Array_Contains"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "71a3fdae-66a5-4429-a698-380a3d1d39b8",
+     "showTitle": false,
+     "tableResultSettingsMap": {
+      "0": {
+       "dataGridStateBlob": "{\"version\":1,\"tableState\":{\"columnPinning\":{\"left\":[\"#row_number#\"],\"right\":[]},\"columnSizing\":{\"Outlet_Type\":222},\"columnVisibility\":{}},\"settings\":{\"columns\":{}},\"syncTimestamp\":1768342218657}",
+       "filterBlob": null,
+       "queryPlanFiltersBlob": null,
+       "tableResultIndex": 0
+      }
+     },
+     "title": ""
+    }
+   },
+   "outputs": [],
+   "source": [
+    "df_explode.withColumn('type1_flag',array_contains('Outlet_type','Type1')).display()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {},
+     "inputWidgets": {},
+     "nuid": "fcf627fc-144a-441e-81d5-e79f7898d5fe",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "source": [
+    "### Group By"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {},
+     "inputWidgets": {},
+     "nuid": "3d232af1-ba15-4b93-a8f8-7c5994faabe9",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "source": [
+    "#### scenario 1 sum"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "99eb2444-f841-4a0c-ba3d-e3dd3f9c5dc0",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "outputs": [],
+   "source": [
+    "df.groupby('item_type').agg(sum('item_mrp')).display()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {},
+     "inputWidgets": {},
+     "nuid": "cc9a8797-b027-4824-914d-cc53f729fc15",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "source": [
+    "#### scenario 2 avg"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "8b9f768e-7c89-42bf-a185-ae08f785b306",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "outputs": [],
+   "source": [
+    "df.groupby('item_type').agg(avg('item_mrp')).display()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {},
+     "inputWidgets": {},
+     "nuid": "395f4835-d0b6-465a-8759-51d7b7134aac",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "source": [
+    "#### scenario 3 "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "68256834-3c21-475c-92f3-a95721ed5f1c",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "outputs": [],
+   "source": [
+    "df.groupby('Item_Type','Outlet_Size').agg(sum('Item_MRP'))\\\n",
+    "    .alias('Total_MRP').display()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {},
+     "inputWidgets": {},
+     "nuid": "f3692a81-ec90-4159-ac23-6a179a0199aa",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "source": [
+    "#### scenario 4"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "ed077e7d-a896-4966-bbfe-87084fc102ee",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "outputs": [],
+   "source": [
+    "df.groupby('Item_Type','Outlet_Size').agg(sum('Item_MRP'),avg('Item_MRP')).display()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {},
+     "inputWidgets": {},
+     "nuid": "36142296-b9c9-44f6-b46a-b3e3a4c3b04f",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "source": [
+    "### Collect list"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "c44926d2-c9df-46fc-831e-4ce39c6c5088",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "outputs": [],
+   "source": [
+    "data = [\n",
+    "    ('user1','book1'),\n",
+    "    ('user2','book2'),\n",
+    "    ('user3','book3'),\n",
+    "    ('user4','book4'),\n",
+    "    ('user5','book5')]\n",
+    "schema = 'user String, book String'\n",
+    "dfbook = spark.createDataFrame(data,schema)\n",
+    "dfbook.display()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "edb1db78-584e-459f-aa12-04560fc5887e",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "outputs": [],
+   "source": [
+    "dfbook = dfbook.groupby('user').agg(collect_list('book'))\n",
+    "dfbook.display()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {},
+     "inputWidgets": {},
+     "nuid": "e26008d3-e06e-46f3-8352-b0886860b770",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "source": [
+    "### Pivot"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "7c4da04c-d1f1-4708-90d3-4a7697016e5a",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "outputs": [],
+   "source": [
+    "df.display()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "df32ca7b-a527-4158-9ff0-8ff14357a9ad",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "outputs": [],
+   "source": [
+    "df.groupBy('Item_Type').pivot('Outlet_Size').agg(round(avg('Item_MRP'),4)).display()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {},
+     "inputWidgets": {},
+     "nuid": "6a5253d1-39da-4dc2-beb4-414fd78b8ee7",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "source": [
+    "### When Otherwise"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "3a2ddcac-cb30-4893-b725-ae84e13f9c7c",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "outputs": [],
+   "source": [
+    "df = df.withColumn('veg_flag',when(col('Item_Type')=='Meat','Non-Veg').otherwise('Veg'))\n",
+    "df.display()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "0a8f1b1c-5b78-4391-abdc-f8326c89fa3c",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "outputs": [],
+   "source": [
+    "df.withColumn('veg_exp_flag',when((col('veg_flag')=='Veg') & (col('Item_MRP')<100),'Veg_Inexpensive')\\\n",
+    "                            .when((col('veg_flag')=='Veg') & (col('Item_MRP')>100),'Veg_Expensive')\\\n",
+    "                            .otherwise('Non-Veg')).display()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {},
+     "inputWidgets": {},
+     "nuid": "48b1cd36-c588-4135-aca1-82bc1f3b577a",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "source": [
+    "### Joins\n",
+    "#### Inner Join\n",
+    "#### Left Join\n",
+    "#### Right Join\n",
+    "#### Anti Join"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {},
+     "inputWidgets": {},
+     "nuid": "85466725-2e65-4c5a-8b4d-9c2f9f1c0a62",
      "showTitle": false,
      "tableResultSettingsMap": {},
      "title": ""
@@ -1727,6 +2281,20 @@
   "application/vnd.databricks.v1+notebook": {
    "computePreferences": null,
    "dashboards": [
+    {
+     "elements": [],
+     "globalVars": {},
+     "guid": "",
+     "layoutOption": {
+      "grid": true,
+      "stack": true
+     },
+     "nuid": "ef448b0e-ed1a-4f73-bfe7-f661ed5b539b",
+     "origId": 8639549207095605,
+     "title": "Untitled",
+     "version": "DashboardViewV1",
+     "width": 1024
+    },
     {
      "elements": [],
      "globalVars": {},
