--- a/1_Tutorial.ipynb
+++ b/1_Tutorial.ipynb
@@ -2265,9 +2265,240 @@
    "execution_count": 0,
    "metadata": {
     "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {},
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
      "inputWidgets": {},
      "nuid": "85466725-2e65-4c5a-8b4d-9c2f9f1c0a62",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "outputs": [],
+   "source": [
+    "emp_data = [\n",
+    "    ('101','Aditi','d01'),\n",
+    "    ('102','Gauri','d02'),\n",
+    "    ('103','Sneha','d03'),\n",
+    "    ('104','Rutuja','d03'),\n",
+    "    ('105','Riya','d04'),\n",
+    "    ('106','Shraddha','d05'),\n",
+    "    ('107','Priya','d07'),\n",
+    "    ('108','Priyanka','d08')\n",
+    "\n",
+    "]\n",
+    "dept_data = [\n",
+    "    ('d01','IT'),\n",
+    "    ('d02','Finace'),\n",
+    "    ('d03','Healthcare'),\n",
+    "    ('d04','Accounts'),\n",
+    "    ('d05','HR'),\n",
+    "    ('d06','Sales')\n",
+    "]\n",
+    "emp_schema = 'empid string,name string,dept_id string'\n",
+    "dept_schema = 'id string,dept_name string'\n",
+    "\n",
+    "df1 = spark.createDataFrame(emp_data,emp_schema)\n",
+    "df2 = spark.createDataFrame(dept_data,dept_schema)\n",
+    "df1.display()\n",
+    "df2.display()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {},
+     "inputWidgets": {},
+     "nuid": "51915349-1eb1-4b44-ab80-634da6920edc",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "source": [
+    "#### inner join"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "d08f6440-ae57-4ea5-a06d-5d9d16c060c1",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "outputs": [],
+   "source": [
+    "df1.join(df2,df1['dept_id']==df2['id'],'inner').display()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {},
+     "inputWidgets": {},
+     "nuid": "c4144c6d-b783-40d5-abfd-a2b6e5b1d907",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "source": [
+    "#### left join"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "97b39031-abaa-4751-8a44-99b19d28cba1",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "outputs": [],
+   "source": [
+    "df1.join(df2,df1['dept_id']==df2['id'],'left').display()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {},
+     "inputWidgets": {},
+     "nuid": "e1d7d278-8bc7-44d3-b20f-8b1038a8a239",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "source": [
+    "#### right join"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "3f9f1509-fc4e-4c01-bc8f-c512504f810c",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "outputs": [],
+   "source": [
+    "df1.join(df2,df1['dept_id'] == df2['id'],'right').display()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {},
+     "inputWidgets": {},
+     "nuid": "7dc9336c-e749-4f57-b32b-5afccd74dbfe",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "source": [
+    "#### anti join"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "980805b3-ae23-4899-9059-a154a4b1cb4c",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "outputs": [],
+   "source": [
+    "df1.join(df2,df1['dept_id'] == df2['id'],'anti').display()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {},
+     "inputWidgets": {},
+     "nuid": "d2faa636-cfb4-461a-a9cd-6f33acdb55de",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "source": [
+    "#### full join"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "f52609df-aa00-4274-b438-df405e7808cc",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "outputs": [],
+   "source": [
+    "df1.join(df2,df1['dept_id'] == df2['id'],'full').display()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {},
+     "inputWidgets": {},
+     "nuid": "f94c41be-cd96-4e2d-abb8-1cca1b45a84d",
      "showTitle": false,
      "tableResultSettingsMap": {},
      "title": ""
